{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 31,
  "lineage": "df8c46b7-fcba-fa9e-e033-180ff0bafeb5",
  "resources": [
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04cd4f7ea1005171b",
            "domain": "vpc",
            "id": "eipalloc-04cd4f7ea1005171b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-156-77-17.compute-1.amazonaws.com",
            "public_ip": "54.156.77.17",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Test": "test"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08615e2678f2e540b",
            "domain": "vpc",
            "id": "eipalloc-08615e2678f2e540b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-213-94-7.compute-1.amazonaws.com",
            "public_ip": "18.213.94.7",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Test": "test"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw-zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04cd4f7ea1005171b",
            "connectivity_type": "public",
            "id": "nat-00c26ca4bfdc98717",
            "network_interface_id": "eni-041919ae990b811b9",
            "private_ip": "10.0.1.8",
            "public_ip": "54.156.77.17",
            "subnet_id": "subnet-084f1f8fb582a255a",
            "tags": {
              "Name": "Prod-NAT-GW-1"
            },
            "tags_all": {
              "Name": "Prod-NAT-GW-1",
              "Test": "test"
            }
          },
          "dependencies": [
            "module.nat.aws_eip.EIP",
            "module.subnets.aws_subnet.subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw-zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08615e2678f2e540b",
            "connectivity_type": "public",
            "id": "nat-0c756290455e473c8",
            "network_interface_id": "eni-02b11073c102ed4f0",
            "private_ip": "10.0.3.14",
            "public_ip": "18.213.94.7",
            "subnet_id": "subnet-028878de39837ad28",
            "tags": {
              "Name": "Prod-NAT-GW-2"
            },
            "tags_all": {
              "Name": "Prod-NAT-GW-2",
              "Test": "test"
            }
          },
          "dependencies": [
            "module.nat.aws_eip.EIP",
            "module.subnets.aws_subnet.subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.route-tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953756914856:route-table/rtb-0d28cb5e2dcb56d29",
            "id": "rtb-0d28cb5e2dcb56d29",
            "owner_id": "953756914856",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00c26ca4bfdc98717",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Test": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-024028b03633759c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_eip.EIP",
            "module.nat.aws_nat_gateway.natgw-zone1",
            "module.nat.aws_nat_gateway.natgw-zone2",
            "module.subnets.aws_subnet.subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953756914856:route-table/rtb-05064233717766346",
            "id": "rtb-05064233717766346",
            "owner_id": "953756914856",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c756290455e473c8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Test": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-024028b03633759c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_eip.EIP",
            "module.nat.aws_nat_gateway.natgw-zone1",
            "module.nat.aws_nat_gateway.natgw-zone2",
            "module.subnets.aws_subnet.subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953756914856:route-table/rtb-056cbfdee9cf4b766",
            "id": "rtb-056cbfdee9cf4b766",
            "owner_id": "953756914856",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00c26ca4bfdc98717",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Test": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-024028b03633759c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_eip.EIP",
            "module.nat.aws_nat_gateway.natgw-zone1",
            "module.nat.aws_nat_gateway.natgw-zone2",
            "module.subnets.aws_subnet.subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953756914856:route-table/rtb-03087180db3b5c576",
            "id": "rtb-03087180db3b5c576",
            "owner_id": "953756914856",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c756290455e473c8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Test": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-024028b03633759c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_eip.EIP",
            "module.nat.aws_nat_gateway.natgw-zone1",
            "module.nat.aws_nat_gateway.natgw-zone2",
            "module.subnets.aws_subnet.subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.route-tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953756914856:route-table/rtb-0e68eb4f9cef2e03a",
            "id": "rtb-0e68eb4f9cef2e03a",
            "owner_id": "953756914856",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00c14cc295afadebb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Test": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-024028b03633759c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_eip.EIP",
            "module.nat.aws_nat_gateway.natgw-zone1",
            "module.nat.aws_nat_gateway.natgw-zone2",
            "module.subnets.aws_subnet.subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953756914856:route-table/rtb-094d1911c757ecd5f",
            "id": "rtb-094d1911c757ecd5f",
            "owner_id": "953756914856",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00c14cc295afadebb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Test": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-024028b03633759c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_eip.EIP",
            "module.nat.aws_nat_gateway.natgw-zone1",
            "module.nat.aws_nat_gateway.natgw-zone2",
            "module.subnets.aws_subnet.subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953756914856:route-table/rtb-09f9da13b8d072a46",
            "id": "rtb-09f9da13b8d072a46",
            "owner_id": "953756914856",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00c14cc295afadebb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Test": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-024028b03633759c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_eip.EIP",
            "module.nat.aws_nat_gateway.natgw-zone1",
            "module.nat.aws_nat_gateway.natgw-zone2",
            "module.subnets.aws_subnet.subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953756914856:route-table/rtb-0c9cc2c71588f3315",
            "id": "rtb-0c9cc2c71588f3315",
            "owner_id": "953756914856",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00c14cc295afadebb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Test": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-024028b03633759c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_eip.EIP",
            "module.nat.aws_nat_gateway.natgw-zone1",
            "module.nat.aws_nat_gateway.natgw-zone2",
            "module.subnets.aws_subnet.subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.route-tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb3db71d1ca44767",
            "route_table_id": "rtb-0d28cb5e2dcb56d29",
            "subnet_id": "subnet-0a625c2eeac7df050"
          },
          "dependencies": [
            "module.nat.aws_eip.EIP",
            "module.nat.aws_nat_gateway.natgw-zone1",
            "module.nat.aws_nat_gateway.natgw-zone2",
            "module.route-tables.aws_route_table.private",
            "module.subnets.aws_subnet.subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0184c93bf2b523d88",
            "route_table_id": "rtb-05064233717766346",
            "subnet_id": "subnet-0cae364f76912c4fe"
          },
          "dependencies": [
            "module.nat.aws_eip.EIP",
            "module.nat.aws_nat_gateway.natgw-zone1",
            "module.nat.aws_nat_gateway.natgw-zone2",
            "module.route-tables.aws_route_table.private",
            "module.subnets.aws_subnet.subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012981bece4f777ee",
            "route_table_id": "rtb-056cbfdee9cf4b766",
            "subnet_id": "subnet-0daedb99b807ddace"
          },
          "dependencies": [
            "module.nat.aws_eip.EIP",
            "module.nat.aws_nat_gateway.natgw-zone1",
            "module.nat.aws_nat_gateway.natgw-zone2",
            "module.route-tables.aws_route_table.private",
            "module.subnets.aws_subnet.subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a5b076d62d6854a",
            "route_table_id": "rtb-03087180db3b5c576",
            "subnet_id": "subnet-0a328e0764639edf2"
          },
          "dependencies": [
            "module.nat.aws_eip.EIP",
            "module.nat.aws_nat_gateway.natgw-zone1",
            "module.nat.aws_nat_gateway.natgw-zone2",
            "module.route-tables.aws_route_table.private",
            "module.subnets.aws_subnet.subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.route-tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037fed879b4814a85",
            "route_table_id": "rtb-0e68eb4f9cef2e03a",
            "subnet_id": "subnet-084f1f8fb582a255a"
          },
          "dependencies": [
            "module.nat.aws_eip.EIP",
            "module.nat.aws_nat_gateway.natgw-zone1",
            "module.nat.aws_nat_gateway.natgw-zone2",
            "module.route-tables.aws_route_table.public",
            "module.subnets.aws_subnet.subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4540e540e43da05",
            "route_table_id": "rtb-094d1911c757ecd5f",
            "subnet_id": "subnet-028878de39837ad28"
          },
          "dependencies": [
            "module.nat.aws_eip.EIP",
            "module.nat.aws_nat_gateway.natgw-zone1",
            "module.nat.aws_nat_gateway.natgw-zone2",
            "module.route-tables.aws_route_table.public",
            "module.subnets.aws_subnet.subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8726c921996cb34",
            "route_table_id": "rtb-09f9da13b8d072a46",
            "subnet_id": "subnet-041da58cebb9cd705"
          },
          "dependencies": [
            "module.nat.aws_eip.EIP",
            "module.nat.aws_nat_gateway.natgw-zone1",
            "module.nat.aws_nat_gateway.natgw-zone2",
            "module.route-tables.aws_route_table.public",
            "module.subnets.aws_subnet.subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039c7586cf9cbef48",
            "route_table_id": "rtb-0c9cc2c71588f3315",
            "subnet_id": "subnet-006ef78f761e7fe1c"
          },
          "dependencies": [
            "module.nat.aws_eip.EIP",
            "module.nat.aws_nat_gateway.natgw-zone1",
            "module.nat.aws_nat_gateway.natgw-zone2",
            "module.route-tables.aws_route_table.public",
            "module.subnets.aws_subnet.subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953756914856:subnet/subnet-084f1f8fb582a255a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084f1f8fb582a255a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "953756914856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prod-NAT-ALB-Subnet-1"
            },
            "tags_all": {
              "Name": "Prod-NAT-ALB-Subnet-1",
              "Test": "test"
            },
            "vpc_id": "vpc-024028b03633759c6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953756914856:subnet/subnet-028878de39837ad28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028878de39837ad28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "953756914856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prod-NAT-ALB-Subnet-2"
            },
            "tags_all": {
              "Name": "Prod-NAT-ALB-Subnet-2",
              "Test": "test"
            },
            "vpc_id": "vpc-024028b03633759c6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953756914856:subnet/subnet-041da58cebb9cd705",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041da58cebb9cd705",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "953756914856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prod-Web-Subnet-1"
            },
            "tags_all": {
              "Name": "Prod-Web-Subnet-1",
              "Test": "test"
            },
            "vpc_id": "vpc-024028b03633759c6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953756914856:subnet/subnet-006ef78f761e7fe1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006ef78f761e7fe1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "953756914856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prod-Web-Subnet-2"
            },
            "tags_all": {
              "Name": "Prod-Web-Subnet-2",
              "Test": "test"
            },
            "vpc_id": "vpc-024028b03633759c6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953756914856:subnet/subnet-0a625c2eeac7df050",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.14.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a625c2eeac7df050",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "953756914856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prod-App-Subnet-1"
            },
            "tags_all": {
              "Name": "Prod-App-Subnet-1",
              "Test": "test"
            },
            "vpc_id": "vpc-024028b03633759c6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953756914856:subnet/subnet-0cae364f76912c4fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cae364f76912c4fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "953756914856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prod-App-Subnet-2"
            },
            "tags_all": {
              "Name": "Prod-App-Subnet-2",
              "Test": "test"
            },
            "vpc_id": "vpc-024028b03633759c6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953756914856:subnet/subnet-0daedb99b807ddace",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.25.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0daedb99b807ddace",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "953756914856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prod-DB-Subnet-1"
            },
            "tags_all": {
              "Name": "Prod-DB-Subnet-1",
              "Test": "test"
            },
            "vpc_id": "vpc-024028b03633759c6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953756914856:subnet/subnet-0a328e0764639edf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.30.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a328e0764639edf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "953756914856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prod-DB-Subnet-2"
            },
            "tags_all": {
              "Name": "Prod-DB-Subnet-2",
              "Test": "test"
            },
            "vpc_id": "vpc-024028b03633759c6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953756914856:internet-gateway/igw-00c14cc295afadebb",
            "id": "igw-00c14cc295afadebb",
            "owner_id": "953756914856",
            "tags": {
              "Name": "Prod-VPC-IGW"
            },
            "tags_all": {
              "Name": "Prod-VPC-IGW",
              "Test": "test"
            },
            "vpc_id": "vpc-024028b03633759c6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953756914856:vpc/vpc-024028b03633759c6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dae8724d5c9a4a7d",
            "default_route_table_id": "rtb-0a73866dd1bbaf27a",
            "default_security_group_id": "sg-000395e009adcae41",
            "dhcp_options_id": "dopt-0851cce5320cc94b1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-024028b03633759c6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a73866dd1bbaf27a",
            "owner_id": "953756914856",
            "tags": {
              "Name": "Prod-VPC"
            },
            "tags_all": {
              "Name": "Prod-VPC",
              "Test": "test"
            }
          }
        }
      ]
    }
  ]
}